--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ django-filter==2.4.0
 django-hitcount==1.3.3
 django-mathfilters==1.0.0
 django-widget-tweaks==1.4.8
+gunicorn==20.0.4
+psycopg2-binary==2.8.6
 pytz @ file:///tmp/build/80754af9/pytz_1608922264688/work
 soupsieve==2.1
 sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
