--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+asgiref @ file:///tmp/build/80754af9/asgiref_1605055780383/work
 beautifulsoup4==4.9.3
 certifi==2020.12.5
 Django==3.0.3
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap4==2.3.1
+django-cors-headers==3.7.0
 django-etc==1.3.0
 django-filter==2.4.0
 django-hitcount==1.3.3
@@ -10,5 +12,7 @@ django-mathfilters==1.0.0
 django-widget-tweaks==1.4.8
 gunicorn==20.0.4
 psycopg2-binary==2.8.6
+pytz @ file:///tmp/build/80754af9/pytz_1608922264688/work
 soupsieve==2.1
+sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
 wincertstore==0.2
