--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref @ file:///tmp/build/80754af9/asgiref_1605055780383/work
 beautifulsoup4==4.9.3
 certifi==2020.12.5
+cffi==1.14.5
 Django==3.0.3
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap4==2.3.1
@@ -12,7 +13,12 @@ django-mathfilters==1.0.0
 django-widget-tweaks==1.4.8
 gunicorn==20.0.4
 psycopg2-binary==2.8.6
+pycparser==2.20
+PyNaCl==1.4.0
+python-dateutil==2.8.1
 pytz @ file:///tmp/build/80754af9/pytz_1608922264688/work
+setuptools-git==1.2
+six==1.15.0
 soupsieve==2.1
 sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
 wincertstore==0.2
